syntax = "proto3";

package telele.type;

import "google/protobuf/timestamp.proto";

message TagCategory {
  int32                     id            = 1;
  string                    language_code = 2;
  string                    name          = 3;
  google.protobuf.Timestamp created_at    = 4;
  google.protobuf.Timestamp updated_at    = 5;
  google.protobuf.Timestamp deleted_at    = 6;
}