syntax = "proto3";

package telele.type;

import "google/protobuf/timestamp.proto";

message UserTag {
  string                    user_id     = 1;
  int32                     tag_id      = 2;
  google.protobuf.Timestamp created_at  = 3;
  google.protobuf.Timestamp updated_at  = 4;
  google.protobuf.Timestamp deleted_at  = 5;
}

